Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Sobota, 25. 09. 2021</h5>
+<h5>Neděle, 26. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Ve dnech 27.-28.9. je jídelna ZAVŘENÁ. Těšíme se na Vás opět ve středu 29.9.</strong>
@@ -22,7 +22,7 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Sobota 25.9.2021</div>
+<div class="nadpis">Neděle 26.9.2021</div>
 <ul>
 <li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
 </div>
@@ -38,10 +38,10 @@
 <h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Dýňová se zakysanou smetanou</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnečka se šunkou a sýrem</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">200g</td><td class="menuName">Dušené vepřové kostky v mrkvi, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">131,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Cikánská hovězí pečeně, dušená rýže</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Pečené masové čevabčiči, vařené brambory s máslem a šnitlíkem</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra na grilu se šunkou, grilované brambory, mexický dip</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažený sýr (45%), vařené brambory s máslem a šnitlíkem, tatarka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Do růžova pečená vepřová panenka, dýňové pyré, grilovaná paprika, plátky anglické slaniny, strouhaný parmazán</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z kuřecích prsou s jemnou kari omáčkou, smažené hranolky</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine s jemnou omáčkou z modrého sýra a anglické slaniny, strouhaný parmazán</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Míchaný zeleninový salát ochucený olivovým olejem, hermelín v těstíčku, vařené vejce</td><td class="menuPrice">133,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra s žampiony, cibulí a feferonkou, naše bramborové krokety, mexický dip</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Srbské vepřové rizoto, kyselá okurka, strouhaný sýr</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, bílé dušené zelí</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený řízek z kuřecích prsou, bramborová kaše s máslem, citrón</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta. 150g Filírovaná kuřecí prsa na carpacio z červené řepy, rukolový salát s balkánským sýrem, hořčičný dresink</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné pepřové omáčce, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine aglio-olio peperoncino s kuřecím masem, strouhaný parmazán</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Náš dvojitý vepřový burger 100g + 100g, s trhanými listy salátu, rajčetem, kyselou okurkou, karamelizovanou cibulkou a nivou, smažené bramborové hranolky, dip z modrého sýra </td><td class="menuPrice">159,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
@@ -93,6 +93,11 @@
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"></table>
 </td>
 </tr>
 </table>
