Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -105,7 +105,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronovo-koprovou jogurtovou omackou, stouchane brambory s kapustou, salatek z cervene repy 139</li><li>Paella s chobotnici, slavkami, lososem, zeleninou a zelenymi bylinkami, salatek 169</li><li>Palive a vonave goanske vindalu s krutim masem, bramborami, garam masala a paprickami Bhut Jolokia, jasminova ryze, salatek 139</li><li>Grilovane medailonky z hoveziho rostence s krenovou majonezou, gratinovane brambory, salatek 169</li><li>Pecene tofu ve sladkokysele omacce s kvetakem, paprikami, rajcaty a zazvorem, jasminova ryze {veganske] 139</li></ol>
+None
 </td>
 </tr>
 </table>
