Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -4,7 +4,7 @@
 <td>
 <div class="containerPriceList">
 <span class="line"></span>
-<h5>Neděle, 26. 09. 2021</h5>
+<h5>Pondělí, 27. 09. 2021</h5>
 <span class="line"></span>
 <p>
 <strong>Ve dnech 27.-28.9. je jídelna ZAVŘENÁ. Těšíme se na Vás opět ve středu 29.9.</strong>
@@ -22,9 +22,9 @@
 <td>
 <div class="menicka">
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
-<div class="nadpis">Neděle 26.9.2021</div>
+<div class="nadpis">Pondělí 27.9.2021</div>
 <ul>
-<li class="polevka">Restaurace má tento den zavřeno.</li> </ul>
+<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
 </div>
 </td>
 </tr>
@@ -35,16 +35,13 @@
 <td>
 <table class="table"><table class="table">
 <tbody>
-<h5 class="border_box_title">Z technických důvodu nepřijímáme platební karty. Děkujeme za pochopení</h5></tbody>
+<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Bramborová s houbami</td><td class="menuPrice">37,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Polévky</h5><tr><td class="menuWeight"></td><td class="menuName">Hovězí vývar se zeleninou a nudlemi</td><td class="menuPrice">35,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Česnečka se šunkou a sýrem</td><td class="menuPrice">37,-</td></tr></tbody>
+<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight">TOP</td><td class="menuName">Šenkýrenský vepřový guláš s cibulí a beraním rohem, naše bramboráčky</td><td class="menuPrice">115,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Hovězí svíčková na smetaně, kynuté houskové knedlíky, brusinky, šlehačka</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, špenát</td><td class="menuPrice">134,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Smažené masové karbanátky, vařené brambory s máslem a šnitlíkem, hořčice, cibule</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra s pórkem na grilu, smažené bramborové plátky, volské oko</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta: 150g Plátkovaná kuřecí prsa na grilované zelenině s bazalkovým pestem, květákové pyré se sýrem, vařené vejce</td><td class="menuPrice">147,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Zadělávané špecle s jemnou omáčkou z modrého sýra, plátkovaná vepřová panenka, rukola</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na žampionech, dušená rýže</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Salát z trhaných listu a zeleniny promíchaný citrónovým dresinkem, nudličky z kuřecích prsou, strouhaný parmazán, vařené vejce</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName"></td><td class="menuPrice"></td></tr></tbody>
 </table><table class="table">
 <tbody>
-<h5 class="border_box_title">Hlavní jídla</h5><tr><td class="menuWeight"></td><td class="menuName">Segedínský vepřový guláš, kynuté houskové knedlíky</td><td class="menuPrice">129,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Drůbeží játra s žampiony, cibulí a feferonkou, naše bramborové krokety, mexický dip</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Srbské vepřové rizoto, kyselá okurka, strouhaný sýr</td><td class="menuPrice">127,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Moravský vrabec, bramborové knedlíky, bílé dušené zelí</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Smažený řízek z kuřecích prsou, bramborová kaše s máslem, citrón</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">Low carb</td><td class="menuName">Nízkosacharidová dieta. 150g Filírovaná kuřecí prsa na carpacio z červené řepy, rukolový salát s balkánským sýrem, hořčičný dresink</td><td class="menuPrice">145,-</td></tr><tr><td class="menuWeight">150g</td><td class="menuName">Steak z vepřové pečeně na jemné pepřové omáčce, restované špecle</td><td class="menuPrice">135,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Těstoviny linguine aglio-olio peperoncino s kuřecím masem, strouhaný parmazán</td><td class="menuPrice">133,-</td></tr><tr><td class="menuWeight">200g</td><td class="menuName">Náš dvojitý vepřový burger 100g + 100g, s trhanými listy salátu, rajčetem, kyselou okurkou, karamelizovanou cibulkou a nivou, smažené bramborové hranolky, dip z modrého sýra </td><td class="menuPrice">159,-</td></tr></tbody>
-</table><table class="table">
-<tbody>
-<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Každý den od 15:00 do 19:00. Pokud nás stále sleduješ na instagramu, můžeš využít každý den své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
+<h5 class="border_box_title">Instagram</h5><tr><td class="menuWeight">Insta gram</td><td class="menuName">Pokud nás stále sleduješ na instagramu, můžeš využít každý den od 15:00 do 19:00 své slevy na řízek z vepřové panenky a sýr plněný šunkou za 99,- (pro nesledující za 145,-Kč) Prosíme v případě vyzvání prokázání sledování na telefonu, děkujeme.</td><td class="menuPrice"></td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažené řízky z vepřové panenky obalené v cornflakes, vařené brambory s máslem a petrželkou, citron</td><td class="menuPrice">99,-</td></tr><tr><td class="menuWeight">Insta gram</td><td class="menuName">150g Smažený sýr 45% plněný šunkou, vařené brambory s máslem a petrželkou, tatarka</td><td class="menuPrice">99,-</td></tr></tbody>
 </table><table class="table">
 <tbody>
 <h5 class="border_box_title">Dezerty</h5><tr><td class="menuWeight"></td><td class="menuName">Tiramisu</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight">TIP</td><td class="menuName">Jablečný závin se šlehačkou</td><td class="menuPrice">45,-</td></tr><tr><td class="menuWeight"></td><td class="menuName">Škubánky sypané mákem, moučkovým cukrem a polité rozpuštěným máslem</td><td class="menuPrice">55,-</td></tr></tbody>
@@ -61,38 +58,68 @@
 <table class="dm">
 <tbody>
 <tr>
-<td class="amount">150g</td>
-<td class="title">Kachní škvarková pomazánka se škvarky, naše zázvorové okurky,
-		u nás dělaný rozmarýnový chléb 1ab</td>
-<td class="pricem">165 Kč</td>
-</tr>
-<tr>
 <td class="amount"></td>
-<td class="title">Valašská kyselica s mačkanými brambory s cibulkou
-		a zakysanou smetanou 1a,7,12</td>
+<td class="title">Pivní cibulačka s tyrolským špekem, tymiánem
+a toastem se sýrem Maasdamer	 1ac,7,9</td>
 <td class="pricem">69 Kč</td>
 </tr>
 <tr>
-<td class="amount">500g</td>
-<td class="title">Konfitované hovězí žebro se silnou šťávou, restovanou
-		zeleninou se žampiony, hořčicí, křenem a naším cibulovým
-		chlebem 1a,9,10</td>
-<td class="pricem">239 Kč</td>
-</tr>
-<tr>
-<td class="amount">250g</td>
-<td class="title">Grilovaná krkovice IBERICO s ragú z lišek a pečenými
-		brambory Grenaille 1a,7,9</td>
-<td class="pricem">259 Kč</td>
+<td class="amount">200g</td>
+<td class="title">FLAMMKUCHEN – bavorský slaný koláč s cibulí, Crème fraîche a slaninou</td>
+<td class="pricem">125 Kč</td>
 </tr>
 <tr>
 <td class="amount"></td>
-<td class="title">Smažené hrušky v těstíčku se skořicovým cukrem, zakysanou
-		smetanou, meruňkovým pyré a oříškovým griliášem 1a,3,7,8</td>
-<td class="pricem">89 Kč</td>
+<td class="title">TAFELSPITZ 	– 	silný hovězí vývar z karabáčku s kořenovou zeleninou a brambory
+sypaný křenem s hořčicí a naším cibulovým chlebem 1ab,9</td>
+<td class="pricem">195 Kč</td>
+</tr>
+<tr>
+<td class="amount">150g</td>
+<td class="title">Grilované norimberské klobásky se salátem z kysaného zelí, hořčicí, křenem
+		a naším cibulovým chlebem 1ab,10,12</td>
+<td class="pricem">135 Kč</td>
+</tr>
+<tr>
+<td class="amount">400g</td>
+<td class="title">Käsespätzle se sýrem, restovanou slaninou, smaženou cibulkou
+a sekanou pažitkou 1a,3,7	</td>
+<td class="pricem">165 Kč</td>
+</tr>
+<tr>
+<td class="amount">250g</td>
+<td class="title">Konfitovaná krkovice a bůček na pivě s demi glace omáčkou, 
+bavorským knedlíkem a salátem z kysaného zelí 1ac,3,9,12</td>
+<td class="pricem">205 Kč</td>
+</tr>
+<tr>
+<td class="amount"></td>
+<td class="title">Kaiserschmarrn	–	Císařský trhanec pečený na másle se skořicí, badyánem
+a jablečným pyré 1a,3,7</td>
+<td class="pricem">85 Kč</td>
+</tr>
+<tr>
+<td class="amount">1l</td>
+<td class="title">PAULANER MÜNICH BIER</td>
+<td class="pricem">130 Kč</td>
+</tr>
+<tr>
+<td class="amount">0,5l</td>
+<td class="title">PAULANER MÜNICH BIER</td>
+<td class="pricem">70 Kč</td>
+</tr>
+<tr>
+<td class="amount">0,04l</td>
+<td class="title">BARTIDA HRUŠKA WILLIAMS</td>
+<td class="pricem">59 Kč</td>
 </tr>
 </tbody>
 </table>
+</td>
+</tr>
+<tr>
+<td>
+<table class="dm"><tr><td class="amount"> </td><td class="title">Špenátový krém s česnekovými krutony 1a,3,7</td><td class="pricem">35 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Telecí játra na slanině s dušenou rýží 1a</td><td class="pricem">129 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Vepřový steak se smetanovou pepřovou omáčkou, hranolky a trhaným salátem 1a,7</td><td class="pricem">135 Kč</td><tr><tr><td class="amount">150g</td><td class="title">Smažené kuřecí řízečky v parmazánové strouhance s mačkanými brambory s jarní cibulkou a šopským salátem 1a,3,7,12</td><td class="pricem">139 Kč</td><tr></tr></tr></tr></tr></tr></tr></tr></tr></table>
 </td>
 </tr>
 </table>
