--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -13,6 +13,41 @@
 							0,-
 						</span>
 </p>
+<p>
+<strong>Tomatová s bylinkovým olejem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							33,-
+						</span>
+</p>
+<p>
+<strong>Dušené hovězí po toskánsku s rýží</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							129,-
+						</span>
+</p>
+<p>
+<strong>Špagety s pestem, kuřecím masem a parmazánem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							127,-
+						</span>
+</p>
+<p>
+<strong>Teplý bufet</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							35,-
+						</span>
+</p>
+<p>
+<strong>Salátový bufet: kus kus s pečenou mrkvičkou, Caesar s kurecim a krůtím masem, okurkový s tomatovým dresinkem</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							45,-
+						</span>
+</p>
 </div>
 </td>
 </tr>
