Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -14,21 +14,21 @@
 						</span>
 </p>
 <p>
-<strong>Tomatová s bylinkovým olejem</strong>
+<strong>Kari polévka se zeleninou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							33,-
 						</span>
 </p>
 <p>
-<strong>Dušené hovězí po toskánsku s rýží</strong>
+<strong>Pečená krkovička s krémovou kapustou a šťouchaným bramborem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							129,-
+							127,-
 						</span>
 </p>
 <p>
-<strong>Špagety s pestem, kuřecím masem a parmazánem</strong>
+<strong>Míchaný salát s asijskými kuřecími stripsy</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							127,-
@@ -42,7 +42,7 @@
 						</span>
 </p>
 <p>
-<strong>Salátový bufet: kus kus s pečenou mrkvičkou, Caesar s kurecim a krůtím masem, okurkový s tomatovým dresinkem</strong>
+<strong>Salátový bufet</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
